--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
-[workspace]
-members = ["rstack", "rstack-macros"]
-resolver = "2"
+[package]
+name = "rustack"
+version = "0.1.0"
+edition = "2021"
 
-[workspace.dependencies]
-rstack-macros = { path = "rstack-macros" }
+
+[dependencies]
+clap = "4.5.40"
+clap_derive = "4.5.40"
+colored = "3.0.0"
+derive = "1.0.0"
+dialoguer = "0.11.0"
+serde = { version = "1.0.219", features = ["derive"] }
